--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
   },
   "dependencies": {
     "@astrocoders/react-native-selectable-text": "^1.5.1",
+    "@react-native-community/slider": "^4.1.7",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@react-navigation/stack": "^6.0.7",
     "axios": "^0.21.4",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-cn-richtext-editor": "^1.0.43",
+    "react-native-color-palette": "^2.2.0",
+    "react-native-drag-text-editor": "^0.0.7",
+    "react-native-draggable": "^3.3.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-keep-awake": "^4.0.0",
     "react-native-maps": "^0.29.3",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-youtube": "^2.0.2",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
